--- a/src/customers/blocks/menu/menu.pug
+++ b/src/customers/blocks/menu/menu.pug
@@ -1,6 +1,6 @@
 aside.menu
     .menu__header 
-        img.menu__icon(src="/assets/images/setting.svg" alt="Logo")
+        img.menu__icon(src="assets/images/setting.svg" alt="Logo")
         span.menu__title= title
         span.menu__subtitle=  "v." + version 
 
