--- a/src/customers/blocks/menu/menu.scss
+++ b/src/customers/blocks/menu/menu.scss
@@ -27,7 +27,7 @@
   }
 
   &__title {
-    @include typography(26px, 600, 'Poppins SemiBold');
+    @include typography(26px, 600);
     line-height: 39px;
     color: $text-primary;
   }
