--- a/src/customers/blocks/pagination/pagination.scss
+++ b/src/customers/blocks/pagination/pagination.scss
@@ -8,11 +8,12 @@
   gap: 12px;
 
   &__item {
-    @include typography(12px, 500, 'Poppins Medium');
+    @include typography(12px, 500);
 
     line-height: 12px;
     box-sizing: border-box;
     border: 1px solid #eeeeee;
+    background-color: #f5f5f5;
     color: #404b52;
     border-radius: 4px;
     padding: 6px 9px;
