--- a/src/customers/common/styles/mixins.scss
+++ b/src/customers/common/styles/mixins.scss
@@ -1,5 +1,5 @@
-@mixin typography($fontSize, $fontWeight: 400, $fontFamily: 'Poppins Regular') {
-  font-family: $fontFamily;
+@mixin typography($fontSize, $fontWeight: 400) {
+  font-family: 'Poppins', sans-serif;
   font-size: $fontSize;
   line-height: normal;
   font-weight: $fontWeight;
