--- a/src/customers/blocks/search-input/search-input.pug
+++ b/src/customers/blocks/search-input/search-input.pug
@@ -1,3 +1,3 @@
 .search-input 
-    img.search-input__icon(src="/assets/images/search.svg" alt="Search icon")
+    img.search-input__icon(src="assets/images/search.svg" alt="Search icon")
     input.search-input__input(id="search" name="search" type="text" placeholder="Search")
