--- a/src/customers/blocks/status/status.scss
+++ b/src/customers/blocks/status/status.scss
@@ -9,7 +9,7 @@
   text-align: center;
 
   &__title {
-    @include typography(14px, 500, 'Poppins Medium');
+    @include typography(14px, 500);
   }
 
   &--active {
