--- a/src/customers/blocks/user-info/user-info.pug
+++ b/src/customers/blocks/user-info/user-info.pug
@@ -1,5 +1,5 @@
 .user-info
-    img.user-info__avatar(src="/assets/images/user.png" alt="Avatar")
+    img.user-info__avatar(src="assets/images/user.jpg" alt="Avatar")
     .user-info__column
         span.user-info__title Evano
         span.user-info__subtitle Project Manager
