--- a/src/customers/blocks/user-info/user-info.scss
+++ b/src/customers/blocks/user-info/user-info.scss
@@ -15,7 +15,7 @@
   }
 
   &__title {
-    @include typography(14px, 500, 'Poppins Medium');
+    @include typography(14px, 500);
     line-height: 21px;
     color: $text-primary;
   }
