--- a/src/customers/blocks/content/content.scss
+++ b/src/customers/blocks/content/content.scss
@@ -9,6 +9,12 @@
   overflow: auto;
 
   &__header {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 16px;
+
     @include typography(24px);
 
     line-height: 36px;
@@ -18,5 +24,26 @@
 
   &__card {
     margin-top: 51px;
+  }
+
+  &__menu-button {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    padding: 8px;
+    border: none;
+    border-radius: 4px;
+    background-color: $white;
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.15);
+    transition: $duration;
+    cursor: pointer;
+
+    @include tablet {
+      display: flex;
+    }
+  }
+
+  @include tablet {
+    padding: 0px 20px 20px 20px;
   }
 }
