--- a/src/customers/blocks/menu/menu.scss
+++ b/src/customers/blocks/menu/menu.scss
@@ -16,7 +16,7 @@
   &__header {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     gap: 8px;
   }
@@ -24,6 +24,14 @@
   &__icon {
     width: 37px;
     height: 37px;
+  }
+
+  &__title-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 8px;
   }
 
   &__title {
@@ -43,5 +51,39 @@
     flex-direction: column;
     margin-top: 53px;
     height: 100%;
+  }
+
+  &__button {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    padding: 8px;
+    border: none;
+    border-radius: 4px;
+    background-color: $white;
+    transition: $duration;
+    cursor: pointer;
+
+    @include tablet {
+      display: flex;
+    }
+  }
+
+  @include tablet {
+    display: none;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateX(-100px);
+    transition: all 0.5s ease;
+
+    &--active {
+      display: flex;
+      opacity: 1;
+      visibility: visible;
+      transform: translateX(0);
+    }
   }
 }
