--- a/src/customers/blocks/table/table.scss
+++ b/src/customers/blocks/table/table.scss
@@ -14,6 +14,7 @@
   }
 
   &__row {
+    white-space: nowrap;
     box-sizing: border-box;
     width: 100%;
 
@@ -39,8 +40,9 @@
     line-height: 21px;
     text-align: start;
     color: $text-secondary;
-    padding: 10px 0px;
+    padding: 10px 4px;
     border-bottom: 1px solid #eeeeee;
+    box-sizing: border-box;
 
     &:last-child {
       text-align: center;
@@ -52,13 +54,15 @@
     line-height: 21px;
     text-align: start;
     color: #292d32;
-    padding: 20px 0px;
+    padding: 4px 4px;
     border-bottom: 1px solid #eeeeee;
+    min-height: 69px;
+    box-sizing: border-box;
 
     &:last-child {
       display: flex;
       justify-content: center;
-      text-align: center;
+      align-items: center;
     }
   }
 }
