--- a/src/layout.pug
+++ b/src/layout.pug
@@ -11,3 +11,5 @@ html(lang="en")
         link(rel="stylesheet" type="text/css" href="css/main.min.css")
     body.body
         block content
+
+        script(src="js/main.min.js" type="text/javascript")
